# mc-idf-builder

./: .gitignore  Dockerfile  compose.yaml  docker-compose.yml  pyproject.toml
app/: builder.py  main.py  parser.py  patcher.py
app/static/: app.js  flash.js  index.html  style.css
